2000-10-12  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_SH_QUOTE): Issue an `obsolete' warning for use
	of backquotes, instead of a `syntax' warning.

2000-10-12  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_VAR_IN_INDIR, AC_VAR_IF_SET): Rename as...
	(AC_VAR_INDIR_IFELSE, AC_VAR_SET_IFELSE): this.

2000-10-12  Akim Demaille  <akim@epita.fr>

	* tests/mktests.sh: Remove tmp files.

2000-10-12  Akim Demaille  <akim@epita.fr>

	Macros used by AC_LANG_COMPILER macros shall not AC_REQUIRE
	AC_LANG_COMPILER by the way of AC_COMPILE_IFELSE etc.

	* acspecific.m4 (_AC_EXEEXT): Use _AC_LINK_IFELSE, not
	AC_LINK_IFELSE to avoid AC_REQUIREing AC_PROG_CC which precisely
	requires _AC_EXEEXT.
	Don't run _AC_CYGWIN, _AC_MINGW32, _AC_EMXOS2.
	* aclang.m4 (_AC_PROG_F77_G): Use _AC_COMPILE_IFELSE, not
	AC_COMPILE_IFELSE.
	(_AC_LANG_COMPILER_WORKS): Use _AC_LINK_IFELSE, not
	AC_LINK_IFELSE.

2000-10-12  Akim Demaille  <akim@epita.fr>

	Diagnose AC_REQUIRE circular dependencies.

	* acgeneral.m4 (_AC_DEFUN_PRO, _AC_DEFUN_EPI): Keep a stack of
	macro expansions, _AC_EXPANSION_STACK.
	Use `_AC_EXPANDING(FOO)' to record the fact that `FOO' is being
	expanded.
	(_AC_REQUIRE): Diagnose required macros which are already being
	expanded.
	Record in _AC_EXPANSION_STACK the AC_REQUIRE calls.
	(_AC_EXPANSION_STACK_DUMP): New macro.

2000-10-12  Akim Demaille  <akim@epita.fr>

	* libm4.m4 (m4_dumpdefs, _m4_dumpdefs_up, _m4_dumpdefs_down): New
	macros.

2000-10-11  Pavel Roskin  <proski@gnu.org>

	* tests/atgeneral.m4 (AT_CHECK): Make sure that $? is set to 0
	if diffs have succeded.

2000-10-11  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_COMPILE_IFELSE, _AC_LINK_IFELSE)
	(_AC_RUN_IFELSE): New macros which are the former
	AC_COMPILE_IFELSE etc. without AC_LANG_COMPILER_REQUIRE.
	(AC_COMPILE_IFELSE, AC_LINK_IFELSE, AC_RUN_IFELSE): Use them.

2000-10-11  Morten Eriksen <mortene@sim.no>

	* acgeneral.m4 (AC_RUN_IFELSE): Add missing executable suffix.