@@ -90,7 +90,7 @@ syntax_exclude_egrep=`echo "$syntax_exclude_list" | tr '
 sed 's/^ *//' >syntax.tm4 <<MK_EOF
 # Generated by mktests.sh, do not edit by hand.		-*- autoconf -*-
 
-cat <<EOF
+cat <<\EOF
 
 Syntax of macros and completeness of header templates.
 
@@ -146,12 +146,12 @@ update_exclude_egrep=`echo "$update_exclude_list" | tr '
 sed 's/^ *//' >update.tm4 <<MK_EOF
 # Generated by mktests.sh, do not edit by hand.		-*- autoconf -*-
 
-cat <<EOF
+cat <<\EOF
 
 Checking that autoupdated configure.in are sane.
 
 Four of these tests will fail, we know that, and we are working on it.
-Please, don't consider them.
+Please, don\'t consider them.
 
 EOF
 
