@@ -1,5 +1,12 @@
 2000-10-12  Akim Demaille  <akim@epita.fr>
 
+	* tests/mktests.sh: Backslash the quote in the heredocs to help
+	syntax highlighting tools.
+	* tests/atspecific.m4 (AT_CHECK_UPDATE): Give a better AT_SETUP
+	title.
+
+2000-10-12  Akim Demaille  <akim@epita.fr>
+
 	* acgeneral.m4 (_AC_SH_QUOTE): Issue an `obsolete' warning for use
 	of backquotes, instead of a `syntax' warning.
 
